# f1-strategy-simulator

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
f1_strategy_simulator/: __main__.py
f1_strategy_simulator/cleaner/: clean_one_race.py
f1_strategy_simulator/common/: constants.py  enums.py  helpers.py  names.py
notebooks/: eda.ipynb
