[project]
name = "f1-strategy-simulator"
version = "0.0.1"
description = "A Formula 1 race strategy simulator"
authors = [
    {name = "esg550",email = "ellasmorenburg@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
packages = [{ include = "f1_strategy_simulator" }]
requires-python = ">=3.12"
dependencies = [
    "fastf1 (>=3.6.1,<4.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
